作ってみた

--- a/index.html
+++ b/index.html
@@ -83,7 +83,7 @@
 						デジタルとリアルの両軸で体感できるプラットフォームです。
 					</p>
 					<div class="hero-actions">
-						<a class="pill-link highlight" href="#materials">360°Start</a>
+						<a class="pill-link highlight" href="https://coderk-star.github.io/ReitakuMap/">360°Start</a>
 						<a class="pill-link" href="#faculties">学部を探す</a>
 					</div>
 				</div>
