--- a/index.html
+++ b/index.html
@@ -17,7 +17,8 @@
 			href="https://fonts.googleapis.com/css2?family=Noto+Serif+JP:wght@400;600;700&family=Zen+Kaku+Gothic+Antique:wght@400;500;700&display=swap"
 			rel="stylesheet"
 		/>
-        <link rel="stylesheet" href="style.css" />
+        <link rel="stylesheet" href="style.css"/>
+		<link rel="icon" href="images/icon.svg">
 	</head>
 	<body>
 		<div class="background-ornament background-ornament--one"></div>
