--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@
 		<main>
 			<section class="illustration-section" aria-label="Reitaku360 illustration">
 				<img
-					src="images/Sashie1.png"
+					src="images/sashie.png"
 					alt="Reitaku360の世界観を象徴するイラスト"
 					class="illustration-image"
 				/>
